2010-10-15  David Gibson  <david.gibson@analog.com>

	* gas/bfin/loop_label.s, gas/bfin/loop_label.d,
	gas/bfin/loop_label2.s, gas/bfin/loop_label2.d,
	gas/bfin/loop_temps.s, gas/bfin/loop_temps.d: New tests.
	* gas/bfin/bfin.exp: Add loop_label, loop_label2, and loop_temps.

2010-10-15  Robin Getz  <robin.getz@analog.com>

	* gas/bfin/16bit_illegals.s, gas/bfin/16bit_illegals.d,
	gas/bfin/parallel_illegal.s, gas/bfin/parallel_illegal.d: New tests.
	* gas/bfin/bfin.exp: Add 16bit_illegals and parallel_illegal.

2010-10-15  Mike Frysinger  <vapier@gentoo.org>

	* gas/bfin/video.s: Add BYTEOP2M insns.
	* gas/bfin/video.d, gas/bfin/video2.s, gas/bfin/video2.d: Likewise.

2010-10-15  Mike Frysinger  <vapier@gentoo.org>

	* gas/bfin/video.d: Change addresses to regexps.
	* gas/bfin/video2.d: Likewise.

2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run inval-reg.

	* gas/i386/inval-reg.l: New.
	* gas/i386/inval-reg.s: Likewise.

2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/disp32.d: New.
	* gas/i386/disp32.s: Likewise.
	* gas/i386/x86-64-disp32.d: Likewise.
	* gas/i386/x86-64-disp32.s: Likewise.

	* gas/i386/i386.exp: Run disp32 and x86-64-disp32.

2010-10-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/zarch-z196.d: Adjust the load/store on condition
	instructions.
	* gas/s390/zarch-z196.s: Likewise.

2010-10-07  Bernd Schmidt  <bernds@codesourcery.com>

	* gas/tic6x/insns-c674x-sploop.d: Add two more sploop/spkernel tests.
	* gas/tic6x/insns-c674x-sploop.s: Likewise.

2010-10-04  David Daney  <ddaney@caviumnetworks.com>

	* gas/mips/mips.exp (octeon-pref): Run the new test.
	* gas/mips/octeon-pref.s: New test.
	* gas/mips/octeon-pref.d: New expected results for the new test.

2010-09-29  Alan Modra  <amodra@gmail.com>

	* gas/all/fwdexp.d, * gas/all/fwdexp.s: New test.
	* gas/all/gas.exp: Run it.

2010-09-29  Alan Modra  <amodra@gmail.com>

	* lib/gas-defs.exp (is_elf_format): Merge with binutils and ld versions.