@@ -295,6 +295,7 @@ if [expr ([istarget "i*86-*-*"] || [istarget "x86_64-*-*"]) && [gas_64_check]] t
     run_dump_test "x86-64-gidt"
     run_dump_test "x86-64-nops"
     run_dump_test "x86-64-nops-1"
+    run_dump_test "x86-64-nops-1-g64"
     run_dump_test "x86-64-nops-1-k8"
     run_dump_test "x86-64-nops-1-nocona"
     run_dump_test "x86-64-nops-1-core2"
