@@ -1,6 +1,7 @@
 #source: nops-1.s
+#as: -mtune=generic64
 #objdump: -drw
-#name: x86-64 nops 1
+#name: x86-64 -mtune=generic64 nops 1
 
 .*: +file format .*
 
