@@ -1,3 +1,9 @@
+2010-10-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-gen.c (cpu_flag_init): Add CpuNop to CPU_GENERIC64_FLAGS.
+
+	* i386-init.h: Regenerated.
+
 2010-10-15  Mike Frysinger  <vapier@gentoo.org>
 
 	* bfin-dis.c (decode_dsp32alu_0): Call imm5d() for BYTEOP2M.
