@@ -1,3 +1,11 @@
+2010-10-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/i386.exp: Run x86-64-nops-1-g64.
+
+	* gas/i386/x86-64-nops-1.d: Remove -mtune=generic64.
+
+	* gas/i386/x86-64-nops-1-g64.d: New.
+
 2010-10-15  David Gibson  <david.gibson@analog.com>
 
 	* gas/bfin/loop_label.s, gas/bfin/loop_label.d,
